@@ -1,0 +1,5 @@
+
+import imports.parent
+
+class Child(imports.parent.Parent):
+    pass
