@@ -1,0 +1,5 @@
+
+
+class Parent:
+    def value(self, v):
+        return v
