@@ -1,6 +1,10 @@
                     Changes made to Pyjamas since 0.5p1
                     -----------------------------------
 
+ * Added means to derive classes from classes in other modules
+   e.g. from module import parent; class child(parent): pass
+   (thanks to Kees Bos).
+
  * Added class "Zero args" support (thanks to Kees Bos).
    TODO: support runtime exceptions when number of function
    call arguments is wrong, as illustrated in the new LibTest.
